objects/APTS_Custom_Notes_and_Attachments__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Access_level__c</fullName>
        <label>Access Level</label>
        <picklist>
            <picklistValues>
                <fullName>Global</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Attachment_Id__c</fullName>
        <externalId>true</externalId>
        <label>Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Attachment_Merge_ID__c</fullName>
        <label>Attachment Merge ID</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>BOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BUDG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cart Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CQT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DWG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FORM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LINK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LQT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RQST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ST&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TQT</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Document_Format__c</fullName>
        <label>Document Format</label>
        <picklist>
            <picklistValues>
                <fullName>DOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DOCX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RTF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XML</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XLSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PNG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPEG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Document_ID__c</fullName>
        <description>ActiveDocs Document ID that will get populate once the Status is &apos;Generated&apos;</description>
        <label>Document ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Formula_Name__c</fullName>
        <formula>APTS_Name__c &amp; &quot;_&quot; &amp;  TEXT(CreatedDate)</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IsAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAttachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IsGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether document is generated or not.</description>
        <label>IsGenerated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IsMerge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsMerge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IsPreview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPreview</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_IsReference__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsReference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Selected_Attachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if document is selected as attachment while generating.</description>
        <label>Is Selected Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Selected_Reference__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if document is selected as reference while generating.</description>
        <label>Is Selected Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Job_ID__c</fullName>
        <externalId>true</externalId>
        <label>Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Line Item</label>
        <referenceTo>Apttus_Config2__LineItem__c</referenceTo>
        <relationshipLabel>Custom Notes and Attachments</relationshipLabel>
        <relationshipName>Custom_Notes_and_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Long_Name__c</fullName>
        <label>Long Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Line Item</label>
        <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
        <relationshipLabel>Custom Notes and Attachments</relationshipLabel>
        <relationshipName>Custom_Notes_and_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Name__c</fullName>
        <formula>APTS_Line_Item__r.APTS_External_Configurator_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quotation Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Custom Notes and Attachments</relationshipLabel>
        <relationshipName>Custom_Notes_and_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quotation</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Custom Notes and Attachments</relationshipLabel>
        <relationshipName>Custom_Notes_and_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Error</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Attachment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Link</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_URL__c</fullName>
        <inlineHelpText>Please ensure URL format is correct. Expected format output should include https://

For example: https://www.google.com</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Custom Notes and Attachment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CNA-{0000000000}</displayFormat>
        <label>Custom Notes and Attachments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Notes and Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>